--- a/Crime_Project.ipynb
+++ b/Crime_Project.ipynb
@@ -2,26 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "8e1f268f",
+   "execution_count": 2,
+   "id": "1483852d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello World!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(\"Hello World!\")"
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a84467ad",
+   "id": "262cc3be",
    "metadata": {},
    "outputs": [],
    "source": []
