Small change to dataset

--- a/Crime_Project.ipynb
+++ b/Crime_Project.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1483852d",
+   "id": "97eb5f3f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,10 +16,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "262cc3be",
+   "id": "87eb9d55",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = pd.read_csv('Datasets/Home_Run_Data.csv')\n",
+    "mergeDF = pd.read_csv('Datasets/MergedHR.csv')"
+   ]
   }
  ],
  "metadata": {
